// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Child 1`] = `
.gMGsdN {
  width: 60%;
  height: 60%;
  display: inline-block;
  position: absolute;
  top: 0;
  border-radius: 100%;
  -webkit-animation: byrAmM 2s infinite ease-in-out;
  animation: byrAmM 2s infinite ease-in-out;
}

<div
  className="sc-bdVaJa gMGsdN"
/>
`;

exports[`render Child second=true 1`] = `
.bkmyJo {
  width: 60%;
  height: 60%;
  display: inline-block;
  position: absolute;
  top: 0;
  border-radius: 100%;
  -webkit-animation: byrAmM 2s infinite ease-in-out;
  animation: byrAmM 2s infinite ease-in-out;
  top: auto;
  bottom: 0;
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

<div
  className="sc-bdVaJa bkmyJo"
/>
`;

exports[`render without props 1`] = `
.jaxMaR {
  width: 40px;
  height: 40px;
  margin: 40px auto;
  position: relative;
  -webkit-text-align: center;
  text-align: center;
  -webkit-animation: cZxgpV 2s infinite linear;
  animation: cZxgpV 2s infinite linear;
}

.jaxMaR > .sc-bdVaJa {
  background-color: #333;
}

<div
  className="sc-bwzfXH jaxMaR"
  color="#333"
  size={40}
/>
`;
